libpurple/log.h


typedef struct _PurpleLog PurpleLog;
typedef struct _PurpleLogLogger PurpleLogLogger;
typedef struct _PurpleLogSet PurpleLogSet;
typedef enum {
	PURPLE_LOG_IM,
	PURPLE_LOG_CHAT,
	PURPLE_LOG_SYSTEM
} PurpleLogType;
typedef enum {
	PURPLE_LOG_READ_NO_NEWLINE = 1
} PurpleLogReadFlags;
struct _PurpleLogLogger {
	char *name;               
	char *id;                 
	void (*create)(PurpleLog *log);
	void (*create_nonblocking)(PurpleLog *log, PurpleLogVoidCallback cb, void *data);
	gsize (*write)(PurpleLog *log,
		     PurpleMessageFlags type,
		     const char *from,
		     time_t time,
		     const char *message);
	void (*write_nonblocking)(PurpleLog *log,
		     PurpleMessageFlags type,
		     const char *from,
		     time_t time,
		     const char *message, 
			 PurpleLogSizeCallback cb, 
			 void *data);
	void (*finalize)(PurpleLog *log);
	void (*finalize_nonblocking)(PurpleLog *log, PurpleLogVoidCallback cb, void *data);
	GList *(*list)(PurpleLogType type, const char *name, PurpleAccount *account);
	void (*list_nonblocking)(PurpleLogType type, const char *name, PurpleAccount *account, PurpleLogListCallback cb, void *data);
	char *(*read)(PurpleLog *log, PurpleLogReadFlags *flags);
	void (*read_nonblocking)(PurpleLog *log, PurpleLogReadFlags *flags, PurpleLogReadCallback cb, void *data);
	int (*size)(PurpleLog *log);
	void (*size_nonblocking)(PurpleLog *log, PurpleLogSizeCallback cb, void *data);
	int (*total_size)(PurpleLogType type, const char *name, PurpleAccount *account);
	void (*total_size_nonblocking)(PurpleLogType type, const char *name, PurpleAccount *account, PurpleLogSizeCallback cb, void *data);
	GList *(*list_syslog)(PurpleAccount *account);
	void (*list_syslog_nonblocking)(PurpleAccount *account, PurpleLogListCallback cb, void *data);
	void (*get_log_sets)(PurpleLogSetCallback cb, GHashTable *sets);
	void (*get_log_sets_nonblocking)(PurpleLogSetCallback cb, GHashTable *sets, 
		PurpleLogVoidCallback cb1, void *data);
	gboolean (*remove)(PurpleLog *log);
	void (*remove_nonblocking)(PurpleLog *log, PurpleLogBooleanCallback cb, void *data);
	gboolean (*is_deletable)(PurpleLog *log);
	void (*_purple_reserved1)(void);
	void (*_purple_reserved2)(void);
	void (*_purple_reserved3)(void);
	void (*_purple_reserved4)(void);
};
struct _PurpleLog {
	PurpleLogType type;                     
	char *name;                           
	PurpleAccount *account;                 
	PurpleConversation *conv;               
	time_t time;                          
	PurpleLogLogger *logger;                
	void *logger_data;                    
	struct tm *tm;                        
};
struct _PurpleLogSet {
	PurpleLogType type;                     
	char *name;                           
	PurpleAccount *account;                 
	gboolean buddy;                       
	char *normalized_name;                
};
PurpleLog *purple_log_new(PurpleLogType type, const char *name, PurpleAccount *account,
                      PurpleConversation *conv, time_t time, const struct tm *tm);
void purple_log_free(PurpleLog *log);
void purple_log_write(PurpleLog *log,
		    PurpleMessageFlags type,
		    const char *from,
		    time_t time,
		    const char *message);
char *purple_log_read(PurpleLog *log, PurpleLogReadFlags *flags);
GList *purple_log_get_logs(PurpleLogType type, const char *name, PurpleAccount *account);
GHashTable *purple_log_get_log_sets(void);
GList *purple_log_get_system_logs(PurpleAccount *account);
int purple_log_get_size(PurpleLog *log);
int purple_log_get_total_size(PurpleLogType type, const char *name, PurpleAccount *account);
gboolean purple_log_is_deletable(PurpleLog *log);
gboolean purple_log_delete(PurpleLog *log);
char *purple_log_get_log_dir(PurpleLogType type, const char *name, PurpleAccount *account);
gint purple_log_compare(gconstpointer y, gconstpointer z);
gint purple_log_set_compare(gconstpointer y, gconstpointer z);
void purple_log_set_free(PurpleLogSet *set);
void purple_log_common_writer(PurpleLog *log, const char *ext);
GList *purple_log_common_lister(PurpleLogType type, const char *name,
							  PurpleAccount *account, const char *ext,
							  PurpleLogLogger *logger);
int purple_log_common_total_sizer(PurpleLogType type, const char *name,
								PurpleAccount *account, const char *ext);
int purple_log_common_sizer(PurpleLog *log);
gboolean purple_log_common_deleter(PurpleLog *log);
gboolean purple_log_common_is_deletable(PurpleLog *log);
PurpleLogLogger *purple_log_logger_new(const char *id, const char *name, int functions, ...);
void purple_log_logger_free(PurpleLogLogger *logger);
void purple_log_logger_add (PurpleLogLogger *logger);
void purple_log_logger_remove (PurpleLogLogger *logger);
void purple_log_logger_set (PurpleLogLogger *logger);
PurpleLogLogger *purple_log_logger_get (void);
GList *purple_log_logger_get_options(void);
void purple_log_init(void);
void *purple_log_get_handle(void);
void purple_log_uninit(void);